# LLM-RAG-Chatbot

./: README.md  pyproject.toml
chroma_data/51b3d9d8-cd27-4f17-a7ff-ef9b3c4637a1/: index_metadata.pickle
langchain_intro/: chatbot.py  create_retriever.py
